--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,119 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+body,
+html {
+  font-family: "Cinzel", serif;
+  font-size: 16px;
+  font-weight: normal;
+  /* color: rgb(184, 115, 51); */
+  color: rgba(255, 217, 0, 0.804);
+}
+.container {
+  width: 100%;
+  max-width: 1600px;
+  /* padding: 20px; */
+  margin: 0 auto;
+  background-color: rgb(0, 0, 0);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar__container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.navbar__container .logo {
+  width: 100%;
+  max-width: 150px;
+  height: auto;
+  padding-left: 20px;
+  display: block;
+  cursor: pointer;
+}
+.navbar__container nav {
+  width: 70%;
+  display: flex;
+  padding: 20px;
+  align-items: center;
+  justify-content: end;
+  gap: 30px;
+}
+.navbar__container nav a {
+  /* color: rgb(184, 115, 51); */
+  padding: 10px 20px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 700;
+  cursor: pointer;
+}
+.navbar__container nav a:hover {
+  color: rgb(0, 0, 0);
+  background-color: rgb(212, 163, 115);
+  border-radius: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.hero__container {
+  background-image: url(./assets/Hero.jpg);
+  background-size: cover;
+  background-position: center -120px;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  padding-top: 100px;
+  padding-left: 100px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.hero__container h1 {
+  font-size: 50px;
+  padding-bottom: 20px;
+}
+
+.hero__container p {
+  font-size: 30px;
+  font-weight: 400;
+}
+
+.about__container {
+  padding-top: 30px;
+  padding-inline: 20px;
+  background-color: #000;
+  /* color: rgb(184, 115, 51); */
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.about__container h2 {
+  margin-bottom: 40px;
+  font-size: 40px;
+}
+
+.about__container .about__box {
+  width: 100%;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  gap: 40px;
+}
+.about__container .about__box img {
+  width: 40%;
+}
+.about__container .about__box .about__text {
+  width: 40%;
+  text-align: justify;
+  font-size: 20px;
+  /* color: rgb(184, 115, 51); */
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.events__container {
+  width: 100%;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+  padding-inline: 20px;
 }
