finishing contact component with form and inputs and styling those elements and creating and styling footer component

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,12 @@ html {
   /* padding: 20px; */
   margin: 0 auto;
   background-color: rgb(0, 0, 0);
+
+  @media only screen and (min-width: 1600px) {
+    border-right: 1px solid lightgray;
+    border-left: 1px solid lightgray;
+    box-shadow: 2px 2px 10px 7px lightgray;
+  }
 }
 
 .navbar__container {
@@ -145,7 +151,96 @@ html {
 }
 
 .events__container .events__row .events__col p {
-text-align: justify;
-line-height: 1.3;
-padding: 5px;
+  text-align: justify;
+  line-height: 1.3;
+  padding: 5px;
+}
+.contact__container {
+  width: 100%;
+  background-color: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 20px 20px 20px;
+}
+
+.contact__container h2 {
+  margin-bottom: 40px;
+  font-size: 40px;
+}
+.contact__container .contact__box {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding-bottom: 40px;
+}
+
+.contact__container .contact__box form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+}
+
+.contact__container .contact__box form input {
+  width: 100%;
+  height: 50px;
+  background-color: #000;
+  color: rgba(255, 217, 0, 0.804);
+  padding-left: 15px;
+  font-size: 16px;
+}
+
+.contact__container .contact__box form textarea {
+  background-color: #000;
+  color: rgba(255, 217, 0, 0.804);
+  padding: 15px;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.contact__container .contact__box form input::placeholder,
+.contact__container .contact__box form textarea::placeholder {
+  padding-left: 10px;
+  font-family: "Cinzel", serif;
+  font-size: 16px;
+  padding-top: 10px;
+  color: rgba(255, 217, 0, 0.804);
+}
+
+.contact__container .contact__box form button {
+  padding: 10px 20px;
+  font-family: "Cinzel", serif;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: rgba(255, 217, 0, 0.804);
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.contact__container .contact__box form button:hover {
+  scale: 1.05;
+}
+
+.footer__container {
+  border-top: 1px solid rgba(255, 217, 0, 0.804);
+  width: 100%;
+  background-color: #000;
+  padding: 20px 10px 20px 10px;
+  max-height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer__container .logo {
+  padding-top: 10px;
+  width: 100%;
+  max-width: 150px;
+  height: auto;
+  padding-left: 20px;
+  cursor: pointer;
 }
