--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,10 @@
 }
 body,
 html {
-  font-family: "Cinzel", serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: normal;
-  /* color: rgb(184, 115, 51); */
+  background-color:  rgb(0, 0, 0);
   color: rgba(255, 217, 0, 0.804);
 }
 .container {
@@ -19,9 +19,8 @@ html {
   background-color: rgb(0, 0, 0);
 
   @media only screen and (min-width: 1600px) {
-    border-right: 1px solid lightgray;
-    border-left: 1px solid lightgray;
-    box-shadow: 2px 2px 10px 7px lightgray;
+    border-right: 1px solid rgb(20, 20, 20);
+    border-left: 1px solid rgb(20, 20, 20);
   }
 }
 
@@ -40,6 +39,7 @@ html {
   cursor: pointer;
 }
 .navbar__container nav {
+  font-family: "Cinzel", serif;
   width: 70%;
   display: flex;
   padding: 20px;
@@ -75,11 +75,13 @@ html {
 }
 
 .hero__container h1 {
+  font-family: "Cinzel", serif;
   font-size: 50px;
   padding-bottom: 20px;
 }
 
 .hero__container p {
+  font-family: "Cinzel", serif;
   font-size: 30px;
   font-weight: 400;
 }
@@ -93,6 +95,7 @@ html {
   align-items: center;
 }
 .about__container h2 {
+  font-family: "Cinzel", serif;
   margin-bottom: 40px;
   font-size: 40px;
 }
@@ -111,6 +114,7 @@ html {
   width: 40%;
   text-align: justify;
   font-size: 20px;
+  line-height: 2;
   /* color: rgb(184, 115, 51); */
 }
 
@@ -125,6 +129,7 @@ html {
 }
 
 .events__container h2 {
+  font-family: "Cinzel", serif;
   margin-bottom: 40px;
   font-size: 40px;
 }
@@ -148,12 +153,13 @@ html {
   width: 100%;
   height: auto;
   max-height: 230px;
+  margin-bottom: 5px;
 }
 
 .events__container .events__row .events__col p {
   text-align: justify;
-  line-height: 1.3;
-  padding: 5px;
+  line-height: 2;
+  padding-inline: 25px;
 }
 .contact__container {
   width: 100%;
@@ -166,6 +172,7 @@ html {
 }
 
 .contact__container h2 {
+  font-family: "Cinzel", serif;
   margin-bottom: 40px;
   font-size: 40px;
 }
@@ -204,7 +211,7 @@ html {
 .contact__container .contact__box form input::placeholder,
 .contact__container .contact__box form textarea::placeholder {
   padding-left: 10px;
-  font-family: "Cinzel", serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   padding-top: 10px;
   color: rgba(255, 217, 0, 0.804);
