--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ html {
 
   @media only screen and (max-width: 576px) {
     display: flex;
-    align-items: center;
+    flex-direction: column;
   }
 }
 .container {
@@ -27,6 +27,13 @@ html {
   @media only screen and (min-width: 1600px) {
     border-right: 1px solid rgb(20, 20, 20);
     border-left: 1px solid rgb(20, 20, 20);
+  }
+
+  @media only screen and (max-width: 576px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
   }
 }
 
@@ -94,7 +101,7 @@ html {
   .hero__container {
     background-image: url(./assets/Hero576.webp);
     max-height: 384px;
-    padding-left: 5px;
+    padding-left: 15px;
   }
 }
 
@@ -118,6 +125,10 @@ html {
   font-size: 50px;
   padding-bottom: 20px;
   z-index: 1;
+
+  @media only screen and (max-width: 576px) {
+    font-size: 30px;
+  }
 }
 
 .hero__container p {
@@ -125,6 +136,10 @@ html {
   font-size: 30px;
   font-weight: 400;
   z-index: 1;
+
+  @media only screen and (max-width: 576px) {
+    font-size: 20px;
+  }
 }
 
 .about__container {
@@ -133,11 +148,35 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+  z-index: 0;
+
+  @media only screen and (max-width: 576px) {
+    flex-direction: column;
+    padding: 30px 5px 20px 5px;
+    background-image: url("./assets/drum.webp");
+    background-size: cover;
+  }
 }
+
+.about__container:after {
+  @media only screen and (max-width: 576px) {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: black;
+    opacity: 0.7;
+  }
+}
+
 .about__container h2 {
   font-family: "Cinzel", serif;
   margin-bottom: 40px;
   font-size: 40px;
+  z-index: 1;
 }
 
 .about__container .about__box {
@@ -146,10 +185,20 @@ html {
   justify-content: center;
   align-items: center;
   gap: 40px;
+
+  @media only screen and (max-width: 576px) {
+    flex-direction: column;
+    gap: 10px;
+  }
 }
+
 .about__container .about__box .about__img {
   width: 40%;
   height: auto;
+  @media only screen and (max-width: 576px) {
+    display: none;
+    /* width: 100%; */
+  }
 }
 
 .about__container .about__box .about__text {
@@ -157,6 +206,15 @@ html {
   text-align: justify;
   font-size: 20px;
   line-height: 2;
+  z-index: 1;
+
+  @media only screen and (max-width: 576px) {
+    width: 100%;
+    padding-inline: 15px;
+    z-index: 1;
+    opacity: 1;
+    position: relative;
+  }
 }
 
 .events__container {
@@ -167,19 +225,30 @@ html {
   justify-content: center;
   align-items: center;
   padding: 30px 20px 20px 20px;
+  @media only screen and (max-width: 576px) {
+    padding: 30px 5px 20px 5px;
+  }
 }
 
 .events__container h2 {
   font-family: "Cinzel", serif;
   margin-bottom: 40px;
   font-size: 40px;
+  text-align: center;
 }
 
 .events__container .events__row {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   gap: 20px;
+  width: 100%;
+
+  @media only screen and (max-width: 576px) {
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+  }
 }
 
 .events__container .events__row .events__col {
@@ -188,13 +257,19 @@ html {
   align-items: center;
   justify-content: center;
   gap: 20px;
+  width: 30%;
+  font-size: 20px;
+
+  @media only screen and (max-width: 576px) {
+    width: 100%;
+  }
 }
 
 .events__container .events__row .events__col img {
   width: 100%;
   height: auto;
-  max-width: 460px;
   max-height: 307px;
+  max-width: 460px;
   margin-bottom: 5px;
 }
 
@@ -202,6 +277,11 @@ html {
   text-align: justify;
   line-height: 2;
   padding-inline: 25px;
+  font-size: 16px;
+
+  @media only screen and (max-width: 992px) {
+    padding-inline: 10px;
+  }
 }
 .contact__container {
   width: 100%;
