--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,6 @@ html {
   @media only screen and (max-width: 576px) {
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 10px;
   }
 }
@@ -42,6 +41,10 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media only screen and (max-width: 576px) {
+    flex-direction: column;
+  }
 }
 .navbar__container .logo {
   width: 100%;
@@ -50,6 +53,11 @@ html {
   padding-left: 20px;
   display: block;
   cursor: pointer;
+  @media only screen and (max-width: 576px) {
+    padding: 20px 25px 0 0;
+    max-width: 120px;
+    align-self: end;
+  }
 }
 .navbar__container nav {
   font-family: "Cinzel", serif;
@@ -59,6 +67,12 @@ html {
   align-items: center;
   justify-content: end;
   gap: 30px;
+  @media only screen and (max-width: 576px) {
+    width: 100%;
+    gap: 10px;
+    padding: 20px 10px 20px 10px;
+    justify-content: center;
+  }
 }
 .navbar__container nav a {
   padding: 10px 20px;
@@ -91,7 +105,6 @@ html {
 @media only screen and (max-width: 992px) {
   .hero__container {
     background-image: url(./assets/Hero992.webp);
-    padding-left: 10px;
     padding-top: 50px;
     max-height: 651px;
   }
@@ -113,11 +126,11 @@ html {
   left: 0;
   right: 0;
   background: black;
-  opacity: 0.2;
+  opacity: 0.3;
   z-index: 0;
-  @media only screen and (max-width: 992px) {
+  /* @media only screen and (max-width: 992px) {
     opacity: 0;
-  }
+  } */
 }
 
 .hero__container h1 {
@@ -128,6 +141,7 @@ html {
 
   @media only screen and (max-width: 576px) {
     font-size: 30px;
+    text-align: center;
   }
 }
 
@@ -139,6 +153,7 @@ html {
 
   @media only screen and (max-width: 576px) {
     font-size: 20px;
+    text-align: center;
   }
 }
 
@@ -151,7 +166,7 @@ html {
   position: relative;
   z-index: 0;
 
-  @media only screen and (max-width: 576px) {
+  @media only screen and (max-width: 992px) {
     flex-direction: column;
     padding: 30px 5px 20px 5px;
     background-image: url("./assets/drum.webp");
@@ -159,8 +174,8 @@ html {
   }
 }
 
-.about__container:after {
-  @media only screen and (max-width: 576px) {
+.about__container .about__box:after {
+  @media only screen and (max-width: 992px) {
     content: "";
     position: absolute;
     top: 0;
@@ -186,7 +201,7 @@ html {
   align-items: center;
   gap: 40px;
 
-  @media only screen and (max-width: 576px) {
+  @media only screen and (max-width: 992px) {
     flex-direction: column;
     gap: 10px;
   }
@@ -195,9 +210,8 @@ html {
 .about__container .about__box .about__img {
   width: 40%;
   height: auto;
-  @media only screen and (max-width: 576px) {
+  @media only screen and (max-width: 992px) {
     display: none;
-    /* width: 100%; */
   }
 }
 
@@ -208,12 +222,16 @@ html {
   line-height: 2;
   z-index: 1;
 
-  @media only screen and (max-width: 576px) {
-    width: 100%;
+  @media only screen and (max-width: 992px) {
+    width: 80%;
     padding-inline: 15px;
     z-index: 1;
     opacity: 1;
     position: relative;
+  }
+  @media only screen and (max-width: 576px) {
+    width: 100%;
+    padding-inline: 10px;
   }
 }
 
@@ -303,7 +321,23 @@ html {
   flex-direction: column;
   align-items: start;
   padding-bottom: 40px;
+  width: 80%;
+  max-width: 700px;
+
+  @media only screen and (max-width: 576px) {
+    width: 100%;
+  }
 }
+
+.contact__container .contact__box h3{
+  padding-bottom: 10px;
+  font-family: "Cinzel", serif;
+}
+
+.contact__container .contact__box p{
+  padding-bottom: 5px;
+}
+
 
 .contact__container .contact__box form {
   display: flex;
@@ -328,6 +362,7 @@ html {
   padding: 15px;
   font-size: 16px;
   margin-bottom: 10px;
+  width: 100%;
 }
 
 .contact__container .contact__box form input::placeholder,
@@ -372,4 +407,13 @@ html {
   height: auto;
   padding-left: 20px;
   cursor: pointer;
+}
+
+.footer__container .footer__contact h3{
+  padding-bottom: 5px;
+  font-family: "Cinzel", serif;
+}
+
+.footer__container .footer__contact p{
+  padding-bottom: 5px;
 }
