--- a/src/App.css
+++ b/src/App.css
@@ -476,3 +476,21 @@ html {
 .footer__container .footer__contact p {
   padding-bottom: 5px;
 }
+
+.footer__container--rights {
+  padding-bottom: 5px;
+  padding-top: 5px;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  font-size: 12px;
+  color: #3a3535;
+  flex-wrap: wrap;
+}
+.footer__container--rights a{
+  color: #363232;
+  cursor: pointer;
+  text-decoration: none;
+}
