--- a/src/App.css
+++ b/src/App.css
@@ -434,6 +434,7 @@ html {
   background-color: rgba(255, 217, 0, 0.804);
   border-radius: 10px;
   border: none;
+  color: #000;
   cursor: pointer;
 }
 
@@ -489,7 +490,7 @@ html {
   color: #3a3535;
   flex-wrap: wrap;
 }
-.footer__container--rights a{
+.footer__container--rights a {
   color: #363232;
   cursor: pointer;
   text-decoration: none;
